chore(deps): update dependency com.google.protobuf:protobuf-bom to v3.20.1 (#7388)
* chore(deps): update plugin io.micronaut.build.shared.settings to v5.3.7 (#7379)

* chore(deps): update plugin io.micronaut.build.shared.settings to v5.3.7

* Downgrade to 5.3.6

* Back to 5.3.7

* Try 5.3.5

* Try 5.3.3

* Up to 5.3.6

* Fix size() calls in Spock

* Fix optional response for mocked call

* Allow SystemLambda to work on Java 17

* Try 5.3.8

* Back to 5.3.6 for now

Co-authored-by: Renovate Bot <bot@renovateapp.com>
Co-authored-by: Tim Yates <tim.yates@gmail.com>

* chore(deps): update dependency com.google.protobuf:protobuf-bom to v3.20.1

* Remove Protobuf version

* Try to reduce the failures in tests

We have 2 tests that fail quite a lot, and seems to be caused by retries.

They both use static members, so this PR clears those down prior to running the test

Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>
Co-authored-by: Renovate Bot <bot@renovateapp.com>
Co-authored-by: Tim Yates <tim.yates@gmail.com>